--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "^3.3.7",
+    "express": "^4.16.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "react": "^16.5.1",
@@ -13,7 +15,9 @@
     "react-scripts": "^2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "prestart": "npm run build",
+    "start": "node server/app",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
