--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "node-sass": "^4.10.0"
   },
   "scripts": {
     "prestart": "npm run build",
@@ -24,7 +25,6 @@
     "prettier": "prettier --single-quote --trailing-comma es5 --write \"./{src,server}/**/*.js\""
   },
   "devDependencies": {
-    "node-sass": "^4.10.0",
     "prettier": "^1.14.3"
   },
   "browserslist": [
