--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "bootstrap": "^3.3.7",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "node-sass": "^4.10.0",
     "popper.js": "^1.14.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
-    "node-sass": "^4.10.0"
+    "react-slick": "^0.23.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "prestart": "npm run build",
