--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-fontawesome": "^1.6.1",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
     "react-slick": "^0.23.2",
-    "slick-carousel": "^1.8.1"
+    "redux": "^4.0.1",
+    "slick-carousel": "^1.8.1",
+    "superagent": "^4.1.0"
   },
   "scripts": {
     "prestart": "npm run build",
